hphp/test/zend/bad/ext-standard-url/bug53248.php
<?php

var_dump(rawurlencode('A1_-.~'));
var_dump(rawurldecode('%41%31%5F%2D%2E%7E'));

?>